[package]
name = "onep-backend-op"
version = "0.1.0"
authors = ["Jordan Doyle <jordan@doyle.la>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onep-backend-api = { path = "../onep-backend-api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "1.5.0-alpha.1"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "0.2", features = ["process"] }