[package]
name = "onep-cli"
version = "0.1.0"
authors = ["Jordan D. <jordan@doyle.la>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onep-api = { path = "../onep-api" }
onep-api-op = { path = "../onep-api-op" }

clap = { git = "https://github.com/clap-rs/clap" }
term-table = "1.3"
itertools = "0.9"
colored = "1.9"