[package]
name = "onep-cli"
version = "0.1.0"
authors = ["Jordan D. <jordan@doyle.la>"]
edition = "2018"

[[bin]]
name = "1p"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onep-backend-api = { path = "../onep-backend-api" }
onep-backend-op = { path = "../onep-backend-op" }

tokio = { version = "0.2", features = ["full"] }

clap = { git = "https://github.com/clap-rs/clap" }
term-table = "1.3"
itertools = "0.9"
colored = "1.9"

thiserror = "1.0"
anyhow = "1.0"

libreauth = "0.13"
url = "2.1"